# final

./: CMakeLists.txt  test_cpu.cc  test_gpu.cc  test_gpu_cmem.cc  test_gpu_cmem_smem.cc  train.cc  train_cpu.cc  train_gpu.cc
src/: CMakeLists.txt  mnist.cc  mnist.h  network.cc  network.h
src/layer/: conv.cc  conv.h  conv_cust.cc  conv_cust.h  conv_gpu.cc  conv_gpu.h  conv_gpu_cmem.cc  conv_gpu_cmem.h  conv_gpu_cmem_smem.cc  conv_gpu_cmem_smem.h
src/layer/custom/: cpu-new-forward.cc  cpu-new-forward.h  gpu-new-forward-cmem-smem.cu  gpu-new-forward-cmem-smem.h  gpu-new-forward-cmem.cu  gpu-new-forward-cmem.h  gpu-new-forward.cu  gpu-new-forward.h  gpu_new_forward.cu  gpu_new_forward.h  gpu_utils.cu  gpu_utils.h
